# Rlyehian-Cthuvian-Translator

./: .env.example  .gitignore  README.md  netlify.toml  package-lock.json  package.json  pyproject.toml
data/: affixes.yaml  lexemes.yaml  rc1-root-glosses.json  registry.json
docs/: ARCHITECTURE.md  LANGUAGE_SPEC.md  LLM_PLUGIN.md  NETLIFY_REGISTRY.md  OFFLINE_LEXICON.md  WEBUI_DEPLOYMENT.md
netlify/functions/: common-generated.mjs  common-terms.mjs  lightweight-decomposer.mjs  rc1-runtime.mjs  translate.mjs
public/: app.js  index.html  styles.css
scripts/: build.mjs  check-lexicon-quality.mjs  generate-common-lexicon.mjs
src/cthuvian_translator/: __init__.py  cli.py  data.py  ir.py  llm.py  normalization.py  phonology.py  registry.py  reverse.py  sealing.py  translator.py
tests/: test_translator.py
tests-js/: rc1-runtime.test.mjs  translate-function.test.mjs
